--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.16.0"
+    "multer": "^2.0.2",
+    "mysql2": "^3.16.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
