--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "devextreme": "23.1.15",
     "devextreme-angular": "23.1.15",
+    "devextreme-exceljs-fork": "^4.4.4",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,7 +32,9 @@
     "@angular-devkit/build-angular": "^16.2.15",
     "@angular/cli": "^16.2.15",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.16.19",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
