--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.16.0",
     "pdf-parse": "^1.1.1",
+    "qrcode": "^1.5.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
