--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,16 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.8",
     "devextreme": "23.1.15",
     "devextreme-angular": "23.1.15",
     "devextreme-exceljs-fork": "^4.4.4",
     "file-saver": "^2.0.5",
+    "jspdf": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -34,6 +38,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^18.16.19",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
